@@ -1,4 +1,4 @@
-.\"	$eterna: bozohttpd.8,v 1.95 2010/05/13 04:17:58 mrg Exp $
+.\"	$eterna: bozohttpd.8,v 1.96 2010/06/17 19:27:32 mrg Exp $
 .\"
 .\" Copyright (c) 1997-2010 Matthew R. Green
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd May 10, 2010
+.Dd June 17, 2010
 .Dt BOZOHTTPD 8
 .Os BOZOS
 .Sh NAME
@@ -450,7 +450,7 @@ The focus has always been simplicity and security, with minimal features
 and regular code audits.
 This manual documents
 .Nm
-version 20100512.
+version 20100617.
 .Sh AUTHORS
 .Nm
 was written by Matthew R. Green
