@@ -1,4 +1,4 @@
-/*	$eterna: daemon-bozo.c,v 1.20 2010/05/10 04:39:00 mrg Exp $	*/
+/*	$eterna: daemon-bozo.c,v 1.21 2010/06/07 21:48:51 mrg Exp $	*/
 
 /*
  * Copyright (c) 1997-2010 Matthew R. Green
@@ -174,7 +174,7 @@ daemon_poll_err(bozohttpd_t *httpd, int fd, int idx)
  * the parent never returns from this function, only children that
  * are ready to run... XXXMRG - still true in fork-lesser bozo?
  */
-void
+int
 bozo_daemon_fork(bozohttpd_t *httpd)
 {
 	int i;
@@ -239,10 +239,16 @@ again:
 				continue;
 			}
 
+#if 0
+			/*
+			 * This code doesn't work.  It interacts very poorly
+			 * with ~user translation and needs to be fixed.
+			 */
 			if (httpd->request_times > 0) {
 				daemon_runchild(httpd, fd);
-				return;
+				return 0;
 			}
+#endif
 
 			switch (fork()) {
 			case -1: /* eep, failure */
@@ -254,7 +260,7 @@ again:
 
 			case 0: /* child */
 				daemon_runchild(httpd, fd);
-				return;
+				return 0;
 
 			default: /* parent */
 				close(fd);
@@ -262,6 +268,7 @@ again:
 			}
 		}
 	}
+	return 0;
 }
 
 #endif /* NO_DAEMON_MODE */
